# safetool-sync

./: .gitignore  LICENSE  README.md  app.py  config.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
dev-tools/: build.py  test_bus.py  validate_translations.py
i18n/: core.py  en.json  es.json
packaging/: installer.iss  org.safetoolhub.safetoolsync.desktop  org.safetoolhub.safetoolsync.metainfo.xml  org.safetoolhub.safetoolsync.yml  safetool-sync-launcher.sh
services/: __init__.py  analysis_export.py  cleanup.py  comparator.py  conflict_resolver.py  disk_detector.py  empty_folder_finder.py  exclusion_engine.py  executor.py  hasher.py  models.py  planner.py  profile_manager.py  scanner.py  session_manager.py  smart_matcher.py  snapshot_manager.py  space_calculator.py  sync_state_manager.py
sync_app/: __init__.py  main_window.py
sync_app/dialogs/: __init__.py  about_dialog.py  actions_help_dialog.py  base_dialog.py  disk_disconnect_dialog.py  disk_selector_dialog.py  resume_dialog.py  settings_dialog.py  smart_match_dialog.py  statuses_help_dialog.py
sync_app/screens/: __init__.py  analysis_screen.py  conflict_assistant.py  empty_folders_screen.py  execution_screen.py  review_screen.py  setup_screen.py  snapshots_screen.py  summary_screen.py
sync_app/styles/: __init__.py  design_system.py  icons.py
sync_app/workers/: __init__.py  compare_worker.py  empty_folder_scan_worker.py  (+5 more)
tests/: conftest.py
utils/: __init__.py  format_utils.py  i18n.py  logger.py  platform_utils.py  settings_manager.py  storage.py
(+34 files in other folders)
