# This file is part of SafeTool Sync, licensed under GPLv3 with
# additional terms. See LICENSE or https://safetoolhub.org for details.

[project]
name = "safetool-sync"
version = "1.0.5-beta"
description = "Mirror synchronization between disks and folders"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
authors = [
    { name = "SafeToolHub", email = "safetoolhub@protonmail.com" },
]
dependencies = [
    "PyQt6>=6.6.0",
    "PyQt6-Qt6>=6.6.0",
    "PyQt6-sip>=13.6.0",
    "qtawesome>=1.3.0",
    "psutil>=5.9.5",
    "send2trash>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-qt>=4.5",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "pyinstaller>=6.0",
    "Pillow>=10.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["config", "app"]
packages = [
    "sync_app",
    "sync_app.styles",
    "sync_app.screens",
    "sync_app.workers",
    "sync_app.dialogs",
    "services",
    "utils",
    "i18n",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]